Fixed Issue #6: Admin CSS - IE 6 not showing tabs. Looks like I reported the bug but don't remember it. Haven't tested fix. Am trusting the bug report. Will verify later.

--- a/SubtextSolution/Subtext.Web/pages/Admin/Resources/ie6admin.css
+++ b/SubtextSolution/Subtext.Web/pages/Admin/Resources/ie6admin.css
@@ -1,3 +1,8 @@
 ﻿#container {
     height: 100%;
 }
+
+#header 
+{
+	float: none;	
+}
